# ai-research-assistant

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  alembic.ini  database.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0cb51a9a9ada_initial_tables.py  2d6a8bae79b8_add_paper_questions_table.py  3de40402094b_initial_tables.py  549e488a596e_add_created_at_to_folders.py  9269ae2266e4_add_created_at_to_folders.py
backend/models/: models.py
backend/repositories/: authors.py  folders.py  papers.py  questions.py
backend/routers/: folders.py  papers.py  questions.py
backend/schemas/: __init__.py  paper.py
backend/services/: ai.py  chunking.py  pdf.py  vector_store.py
docs/: architecture.md  learnings.md  sprints.md
docs/sprints/: sprints.md
frontend/src/: App.jsx
