[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.111.0",
    "fastapi>=0.128.8",
    "google-genai>=1.47.0",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.39.0",
]
